Change scope visibility of seePrivateCarto button Fixing deleteE function Updating position of buttons in view cartographies page

--- a/app/Resources/public_shared/css/base.css
+++ b/app/Resources/public_shared/css/base.css
@@ -14,3 +14,9 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+
+#main{
+    display:block;
+    width:100%;
+    height:500px;
+} 
